# aoc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  newday.sh  setup.sh
2015/: day1.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h
2015/day1/: day1.h
2015/day10/: day10  day10.h  day10p2
2015/day11/: day11.h
2015/day12/: day12.h
2015/day13/: day13.h
2015/day14/: day14.h
2015/day15/: day15.h
2015/day16/: day16.h
2015/day17/: day17.h
2015/day18/: day18.h
2015/day19/: day19.h
2015/day2/: day2.h
2015/day20/: day20.h
2015/day21/: day21.h
2015/day22/: day22.h
2015/day23/: day23.h
2015/day24/: day24.h
2015/day25/: day25.h
2015/day3/: day3.h
2015/day4/: day4.h
2015/day5/: day5.h
2015/day6/: day6.h
2015/day7/: day7.h
2015/day8/: day8.h
2015/day9/: day9.h
2016/day1/: day1.h
2016/day10/: day10.h
2016/day11/: day11.h
2016/day12/: day12.h
2016/day13/: day13.h
2016/day14/: day14.h
2016/day15/: day15.h
2016/day16/: day16.h
2016/day17/: day17.h
2016/day18/: day18.h
2016/day19/: day19.h
2016/day2/: day2.h
2016/day20/: day20.h
2016/day21/: day21.h
2016/day22/: day22.h
2016/day23/: day23.h
2016/day24/: day24.h
2016/day25/: day25.h
2016/day3/: day3.h
2016/day4/: day4.h
2016/day5/: day5.h
2016/day6/: day6.h
2016/day7/: day7.h
2016/day8/: day8.h
2016/day9/: day9.h
2017/day1/: day1.h
2017/day10/: day10.h
2017/day11/: day11.h
2017/day12/: day12.h
2017/day13/: day13.h
2019/: Point.js  Queue.js  intCode.js
template/: day1.h
utils/: cvutils.cpp  cvutils.h  karger.h  template.h
(+122 files in other folders)
